--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: python
 python:
-- '2.6'
 - '2.7'
-- '3.3'
 - '3.4'
 before_install:
 - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh
@@ -10,28 +8,18 @@ before_install:
   -O miniconda.sh; fi
 - chmod +x miniconda.sh
 - "./miniconda.sh -b"
-- if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then export PATH=~/miniconda/bin:$PATH;
+- if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then export PATH=~/miniconda2/bin:$PATH;
   else export PATH=~/miniconda3/bin/:$PATH; fi
 - conda update --yes conda
 install:
 - conda create -n testenv --yes python=$TRAVIS_PYTHON_VERSION pip
 - source activate testenv
-- conda install --yes pytest
+- conda install --yes --channel bioconda --file conda_requirements.txt
 - pip install -r requirements.txt
+# Actually install the package!
 - pip install .
-before_script:
-- git config --global user.email "olga.botvinnik@gmail.com"
-- git config --global user.name "olgabot"
-- git config --global push.default simple
-- export REPO_URL_GITHUB="https://$GH_TOKEN@github.com/$GH_REPO.git"
 script:
 - make coverage
 - make lint
-- make pep8
 after_script:
 - coveralls
-deploy:
-  provider: pypi
-  on:
-    tags: true
-    repo: olgabot/sj2psi
